--- a/style.css
+++ b/style.css
@@ -33,10 +33,12 @@ header .icons i:hover {
 .about {
     grid-area: 2 / 1 / span 4 / span 2;
     text-align: justify;
+    padding: 10px;
 }
 
 .blog {
     grid-area: 2 / 3 / span 4 / span 2;
+    padding: 10px;
 }
 
 .about a:visited {
@@ -56,6 +58,10 @@ p {
 .blog ul {
     list-style-type: none;
     line-height: 300%;
+}
+
+.blog .quote {
+    color: gray;
 }
 
 footer {
