--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
 }
 
 .blog ul {
-    list-style-type: none;
+    list-style-type: '\01F4D6';
     line-height: 300%;
 }
 
@@ -67,4 +67,19 @@ p {
 footer {
     grid-area: 6 / 1 / span 1 / span 4;
     text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    
+    .about {
+        grid-area: 2 / 1 / span 2 / span 4;
+        text-align: justify;
+        padding: 10px;
+    }
+    
+    .blog {
+        grid-area: 4 / 1 / span 2 / span 4;
+        padding: 10px;
+    }
+
 }
