--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
     margin: auto;
     position: relative;
     max-width: 1000px;
-    grid-template: repeat(4, 1fr) / repeat(4, 1fr);
-    grid-gap: 25px;
+    grid-template: repeat(6, 1fr) / repeat(4, 1fr);
+    grid-gap: 20px;
 }
 
 header {
@@ -32,7 +32,6 @@ header .icons i:hover {
 }
 .about {
     grid-area: 2 / 1 / span 2 / span 2;
-    text-align: justify;
     padding: 10px;
 }
 
@@ -64,8 +63,18 @@ p {
     color: gray;
 }
 
-footer {
+.work {
     grid-area: 4 / 1 / span 1 / span 4;
+    padding: 10px;
+}
+
+.study {
+    grid-area: 5 / 1 / span 1 / span 4;
+    padding: 10px;
+}
+
+footer {
+    grid-area: 6 / 1 / span 1 / span 4;
     text-align: center;
 }
 
@@ -75,19 +84,28 @@ footer {
         display: grid;
         margin: auto;
         position: relative;
-        max-height: 900px;
-        grid-template: repeat(4, 1fr) / repeat(4, 1fr);
-        grid-gap: 25px;
+        max-height: 1200px;
+        grid-template: repeat(6, 1fr) / repeat(4, 1fr);
+        grid-gap: 20px;
     }
     
     .about {
         grid-area: 2 / 1 / span 1 / span 4;
-        text-align: justify;
         padding: 10px;
     }
     
     .blog {
         grid-area: 3 / 1 / span 1 / span 4;
+        padding: 10px;
+    }
+
+    .work {
+        grid-area: 4 / 1 / span 1 / span 4;
+        padding: 10px;
+    }
+    
+    .study {
+        grid-area: 5 / 1 / span 1 / span 4;
         padding: 10px;
     }
 
