--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@ body {
 
 header {
     grid-area: 1 / 1 / span 1 / span 4;
-    text-align: center;
 }
 
 header p {
     color: gray;
     font-size: 25px;
+}
+
+header .icons {
+    text-align: right;
 }
 
 header .icons i {
