--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     grid-gap: 20px;
 }
 
+header {
+    background-color: cadetblue;
+}
+
 header .icons {
     text-align: right;
 }
@@ -60,6 +64,7 @@ p {
 
 
 footer {
+    background-color: cadetblue;
     grid-area: 4 / 1 / span 1 / span 4;
     text-align: center;
 }
