--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
 
 header {
     background-color: cadetblue;
+    grid-area: 1 / 1 / 4 / 4;
+    color: white;
 }
 
 header .icons {
@@ -21,7 +23,7 @@ header .icons {
 }
 
 header .icons i {
-    color: gray;
+    color: white;
     padding: 10px;
 }
 
