--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
     margin: auto;
     position: relative;
     max-width: 1000px;
-    grid-template: repeat(4, 1fr) / repeat(4, 1fr);
+    grid-template: repeat(6, 1fr) / repeat(6, 1fr);
     grid-gap: 20px;
 }
 
 header {
     background-color: cadetblue;
-    grid-area: 1 / 1 / 4 / 4;
+    grid-area: 1 / 1 / 6 / 6;
     color: white;
 }
 
@@ -32,12 +32,12 @@ header .icons i:hover {
 }
 
 .about {
-    grid-area: 2 / 1 / span 2 / span 2;
+    grid-area: 2 / 1 / span 4 / span 4;
     padding: 10px;
 }
 
 .blog {
-    grid-area: 2 / 3 / span 2 / span 2;
+    grid-area: 2 / 3 / span 4 / span 4;
     padding: 10px;
 }
 
@@ -67,8 +67,9 @@ p {
 
 footer {
     background-color: cadetblue;
-    grid-area: 4 / 1 / span 1 / span 4;
+    grid-area: 6 / 1 / 6 / 6;
     text-align: center;
+    color: white;
 }
 
 @media only screen and (max-width: 600px) {
