--- a/style.css
+++ b/style.css
@@ -38,14 +38,9 @@ header .icons i:hover {
     padding: 10px;
 }
 
-.about a:visited {
-    text-decoration: none;
+.blog .about a {
     color: cadetblue;
-}
-
-.blog a:visited {
     text-decoration: none;
-    color: cadetblue;
 }
 
 p {
