--- a/style.css
+++ b/style.css
@@ -8,8 +8,15 @@ body {
     margin: auto;
     position: relative;
     max-width: 1000px;
-    grid-template: [main-left] "about  blog" 100% [main-right];
+    grid-template: 
+    [header-left] "head head" 10% [header-right]
+    [main-left] "about  blog" 100% [main-right]
+    [footer-left] "foot  foot" 10% [footer-right];
     grid-gap: 20px;
+}
+
+header {
+    grid-area: head;
 }
 
 .about {
@@ -22,23 +29,20 @@ body {
     padding: 10px;
 }
 
+footer {
+    grid-area: foot;
+}
+
 @media only screen and (max-width: 600px) {
     .container {
         display: grid;
         margin: auto;
         position: relative;
         max-height: 1200px;
-        grid-template: [main-left] "about  blog" 100% [main-right];
+        grid-template:
+        [header-left] "head head" 10% [header-right]
+        [main-left] "about  blog" 100% [main-right]
+        [footer-left] "foot  foot" 10% [footer-right];
         grid-gap: 20px;
-    }
-    
-    .about {
-        grid-area: about;
-        padding: 10px;
-    }
-    
-    .blog {
-        grid-area: blog;
-        padding: 10px;
     }
 }
