--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     [header-left] "head head" 20% [header-right]
     [main-left] "about  blog" 60% [main-right]
     [footer-left] "foot  foot" 20% [footer-right];
-    grid-gap: 20px;
+    grid-gap: 20px 30px;
     padding: 10px;
 }
 
@@ -44,7 +44,7 @@ footer {
         [header-left] "head head" 20% [header-right]
         [main-left] "about  blog" 60% [main-right]
         [footer-left] "foot  foot" 20% [footer-right];
-        grid-gap: 20px;
+        grid-gap: 20px 30px;
         padding: 10px;
     }
 }
