--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 body {
-    font: Tahoma;
+    font-family: "Courier New", Courier, monospace;
     font-size: 20px;
 }
 
