--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,15 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 body {
-    color: white;
-    background-color: black;
     font-family: 'Courier New', Courier, monospace;
 }
 
-.list-group-mine .list-group {
+.list-group {
     max-height: 400px;
     overflow-y: scroll;
-    color: white;
-    background-color: black;
-}
 
-a:link {
-    color: #00FF00;
 }
 
 a:visited {
-    color: fuchsia;
+    text-decoration: none;
 }
